--- a/login.html
+++ b/login.html
@@ -118,7 +118,7 @@
                 if (storedPassword === password) {
                     localStorage.setItem('username', username);
                     alert('You are successfully logged in');
-                    window.location.href = 'dashboard.html'; // Redirect to dashboard
+                    window.location.href = 'index.html'; // Redirect to dashboard
                 } else {
                     document.getElementById('loginError').innerText = 'Invalid username or password';
                 }
