--- a/index.html
+++ b/index.html
@@ -4,76 +4,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard - Budget Calculator</title>
+    <title>Register - Budget Calculator</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
+            background: url('https://images.pexels.com/photos/53621/calculator-calculation-insurance-finance-53621.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1') no-repeat center center fixed;
+            background-size: cover;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
             font-family: 'Montserrat', sans-serif;
+            color: #ffffff;
         }
 
-        /* Navbar Styles */
-        .navbar {
-            background: linear-gradient(90deg, #c9a39d, #d77c6c);
-            border-bottom: 1px solid #ddd;
-            padding: 20px 30px;
-            height: 80px;
-        }
-
-        .navbar-brand {
-            font-weight: 700;
-            color: #fff;
-            font-size: 1.5rem;
-        }
-
-        .navbar-brand:hover {
-            color: #f8f9fa;
-        }
-
-        .navbar-nav .nav-link {
-            color: #fff;
-            font-weight: 500;
-            margin-right: 20px;
-            font-size: 1rem;
-        }
-
-        .navbar-nav .nav-link:hover {
-            color: #f8f9fa;
-            text-decoration: underline;
-        }
-
-        .navbar-text {
-            font-weight: 600;
-            color: #f8f9fa;
-            font-size: 1rem;
-        }
-
-        .btn-outline-danger {
-            border-color: #f8f9fa;
-            color: #f8f9fa;
-        }
-
-        .btn-outline-danger:hover {
-            background-color: #f8f9fa;
-            color: #ff7e67;
-        }
-
-        .container {
-            margin-top: 20px;
-        }
-
-        .balance-section {
-            margin-top: 50px;
-        }
-
-        .balance-section,
-        .expense-section,
-        .add-money-section {
-            margin-bottom: 30px;
+        .register-container {
             background-color: rgba(255, 255, 255, 0.9);
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+            padding: 40px 50px;
+            border-radius: 15px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+            max-width: 400px;
+            width: 100%;
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
+
+        .register-container:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
         }
 
         .form-control {
@@ -99,263 +58,78 @@
             transform: scale(1.05);
         }
 
-        table {
-            background-color: rgba(255, 255, 255, 0.9);
-            border-radius: 10px;
-            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+        h2 {
+            color: #333333;
+            font-weight: 700;
+            text-align: center;
+            margin-bottom: 20px;
         }
 
-        /* Media Query for screens between 300px and 450px */
-        @media (min-width: 300px) and (max-width: 500px) {
-            .navbar {
-                padding: 15px 20px;
-                height: auto;
-            }
+        label {
+            font-weight: 600;
+            color: #666666;
+        }
 
-            .navbar-brand {
-                font-size: 1.25rem;
-            }
+        .text-center a {
+            color: #ff7e67;
+            text-decoration: none;
+        }
 
-            .navbar-nav .nav-link {
-                font-size: 0.9rem;
-            }
-
-            .balance-section,
-            .expense-section,
-            .add-money-section {
-                padding: 15px;
-            }
-
-            .form-control {
-                padding: 8px 15px;
-            }
-
-            .btn-primary {
-                padding: 8px 15px;
-            }
-
-            .table {
-                font-size: 0.9rem;
-            }
-
-            .balance-section h3,
-            .expense-section h4 {
-                font-size: 1.1rem;
-            }
+        .text-center a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 
-<body
-    style="background: url(https://images.pexels.com/photos/8062358/pexels-photo-8062358.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);">
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#"><img src="https://cdn-icons-png.flaticon.com/512/3513/3513914.png" width="50px" alt=""> ExpenseEase</a>
-        <div class="navbar-nav ms-auto">
-            <span class="navbar-text fs-5">Welcome, <span id="username">User</span></span>
-            <button class="btn btn-outline-danger ms-3" onclick="logout()">Logout</button>
-        </div>
-    </nav>
-
-    <div class="container">
-        <!-- Balance Section -->
-        <div class="balance-section mb-5">
-            <div class="row">
-                <div class="col-md-6">
-                    <h3>Balance: ₹<span id="balance">0</span></h3>
-                </div>
-                <div class="col-md-6">
-                    <h3>Expenses: ₹<span id="totalExpenses">0</span></h3>
-                </div>
+<body>
+    <div class="register-container">
+        <h2>Register</h2>
+        <form>
+            <div class="mb-3">
+                <label for="registerName" class="form-label">Username</label>
+                <input type="text" class="form-control" id="registerName" placeholder="Enter your name">
             </div>
-        </div>
-
-        <!-- Row for Add Money and Expense Sections -->
-        <div class="row">
-            <!-- Add Money Section -->
-            <div class="col-md-6">
-                <div class="add-money-section">
-                    <h4>Add Money</h4>
-                    <form id="addMoneyForm" onsubmit="return addMoney()">
-                        <div class="mb-3">
-                            <label for="incomeType" class="form-label">Income Type</label>
-                            <input type="text" class="form-control" id="incomeType" placeholder="Enter income type">
-                        </div>
-                        <div class="mb-3">
-                            <label for="incomeAmount" class="form-label">Amount</label>
-                            <input type="number" class="form-control" id="incomeAmount" placeholder="Enter amount">
-                        </div>
-                        <button type="submit" class="btn btn-primary">Add</button>
-                    </form>
-                </div>
+            <div class="mb-3">
+                <label for="registerEmail" class="form-label">Email</label>
+                <input type="email" class="form-control" id="registerEmail" placeholder="Enter your email">
             </div>
-
-            <!-- Expense Section -->
-            <div class="col-md-6">
-                <div class="expense-section">
-                    <h4>Expense</h4>
-                    <form id="expenseForm" onsubmit="return addExpense()">
-                        <div class="mb-3">
-                            <label for="expenseType" class="form-label">Expense Type</label>
-                            <input type="text" class="form-control" id="expenseType" placeholder="Enter expense type">
-                        </div>
-                        <div class="mb-3">
-                            <label for="expenseAmount" class="form-label">Amount</label>
-                            <input type="number" class="form-control" id="expenseAmount" placeholder="Enter amount">
-                        </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </form>
-                </div>
+            <div class="mb-3">
+                <label for="registerPassword" class="form-label">Password</label>
+                <input type="password" class="form-control" id="registerPassword" placeholder="Enter your password">
             </div>
-        </div>
-
-        <!-- Tables for Income and Expense -->
-        <div class="row">
-            <div class="col-md-6">
-                <h4>Income Details</h4>
-                <table class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th scope="col">Income Type</th>
-                            <th scope="col">Amount</th>
-                            <th scope="col">Balance</th>
-                        </tr>
-                    </thead>
-                    <tbody id="incomeTableBody">
-                        <!-- Rows will be dynamically added here -->
-                    </tbody>
-                </table>
+            <div class="mb-3">
+                <label for="registerConfirmPassword" class="form-label">Confirm Password</label>
+                <input type="password" class="form-control" id="registerConfirmPassword"
+                    placeholder="Confirm your password">
             </div>
-            <div class="col-md-6">
-                <h4>Expense Details</h4>
-                <table class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th scope="col">Expense Type</th>
-                            <th scope="col">Amount</th>
-                            <th scope="col">Balance</th>
-                        </tr>
-                    </thead>
-                    <tbody id="expenseTableBody">
-                        <!-- Rows will be dynamically added here -->
-                    </tbody>
-                </table>
+            <div class="d-grid">
+                <button type="button" class="btn btn-primary" onclick="registerUser()">Register</button>
             </div>
-        </div>
+        </form>
+        <p class="text-center text-dark mt-3">Already have an account? <a href="login.html">Login</a></p>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        // Get current username from local storage or set a default value
-        const username = localStorage.getItem('username') || 'User';
-        document.getElementById('username').innerText = username;
+        function registerUser() {
+            const username = document.getElementById('registerName').value.trim();
+            const email = document.getElementById('registerEmail').value.trim();
+            const password = document.getElementById('registerPassword').value;
+            const confirmPassword = document.getElementById('registerConfirmPassword').value;
 
-        // Create a unique key for the current user
-        const userKey = `user_${username}`;
-
-        // Initialize balance and total expenses from local storage or set to 0 if not present
-        let balance = Number(localStorage.getItem(`${userKey}_balance`)) || 0;
-        let totalExpenses = Number(localStorage.getItem(`${userKey}_totalExpenses`)) || 0;
-        document.getElementById('balance').innerText = balance;
-        document.getElementById('totalExpenses').innerText = totalExpenses;
-
-        // Load data into tables
-        function loadTables() {
-            const incomeData = JSON.parse(localStorage.getItem(`${userKey}_incomeData`)) || [];
-            const expenseData = JSON.parse(localStorage.getItem(`${userKey}_expenseData`)) || [];
-
-            const incomeTableBody = document.getElementById('incomeTableBody');
-            const expenseTableBody = document.getElementById('expenseTableBody');
-
-            // Populate income table
-            incomeTableBody.innerHTML = incomeData.map(item => 
-                `<tr><td>${item.type}</td><td>${item.amount}</td><td>₹${item.balance}</td></tr>`
-            ).join('');
-
-            // Populate expense table
-            expenseTableBody.innerHTML = expenseData.map(item => 
-                `<tr><td>${item.type}</td><td>${item.amount}</td><td>₹${item.balance}</td></tr>`
-            ).join('');
-        }
-
-        loadTables(); // Call the function to load data on page load
-
-        function addMoney() {
-            const incomeType = document.getElementById('incomeType').value;
-            const incomeAmount = document.getElementById('incomeAmount').value;
-
-            if (incomeType && incomeAmount) {
-                balance += +incomeAmount;  // '+' operator implicitly converts string to number
-                document.getElementById('balance').innerText = balance;
-
-                // Save the updated balance to local storage
-                localStorage.setItem(`${userKey}_balance`, balance);
-
-                // Add new entry to the table and local storage
-                const incomeData = JSON.parse(localStorage.getItem(`${userKey}_incomeData`)) || [];
-                incomeData.push({ type: incomeType, amount: incomeAmount, balance: balance });
-                localStorage.setItem(`${userKey}_incomeData`, JSON.stringify(incomeData));
-
-                const incomeTableBody = document.getElementById('incomeTableBody');
-                incomeTableBody.innerHTML += `<tr><td>${incomeType}</td><td>${incomeAmount}</td><td>₹${balance}</td></tr>`;
-
-                // Clear the form fields
-                document.getElementById('incomeType').value = '';
-                document.getElementById('incomeAmount').value = '';
-
-                alert('Amount successfully added');
-                return false; // Prevent form submission
-            } else {
-                alert('Please enter both income type and amount');
-                return false; // Prevent form submission
+            if (password !== confirmPassword) {
+                alert('Passwords do not match');
+                return;
             }
-        }
 
-        function addExpense() {
-            const expenseType = document.getElementById('expenseType').value;
-            const expenseAmount = document.getElementById('expenseAmount').value;
-
-            if (expenseType && expenseAmount) {
-                const amount = +expenseAmount; // Convert to number
-                if (amount <= balance) {
-                    balance -= amount;
-                    totalExpenses += amount;
-                    document.getElementById('balance').innerText = balance;
-                    document.getElementById('totalExpenses').innerText = totalExpenses;
-
-                    // Save the updated balance and total expenses to local storage
-                    localStorage.setItem(`${userKey}_balance`, balance);
-                    localStorage.setItem(`${userKey}_totalExpenses`, totalExpenses);
-
-                    // Add new entry to the table and local storage
-                    const expenseData = JSON.parse(localStorage.getItem(`${userKey}_expenseData`)) || [];
-                    expenseData.push({ type: expenseType, amount: expenseAmount, balance: balance });
-                    localStorage.setItem(`${userKey}_expenseData`, JSON.stringify(expenseData));
-
-                    const expenseTableBody = document.getElementById('expenseTableBody');
-                    expenseTableBody.innerHTML += `<tr><td>${expenseType}</td><td>${expenseAmount}</td><td>₹${balance}</td></tr>`;
-
-                    // Clear the form fields
-                    document.getElementById('expenseType').value = '';
-                    document.getElementById('expenseAmount').value = '';
-
-                    alert('Expense successfully added');
-                    return false; // Prevent form submission
-                } else {
-                    alert('Insufficient balance');
-                    return false; // Prevent form submission
-                }
+            if (username && email && password) {
+                localStorage.setItem(`user_${username}_password`, password);
+                alert('You are successfully registered');
+                window.location.href = 'login.html'; // Redirect to login page
             } else {
-                alert('Please enter both expense type and amount');
-                return false; // Prevent form submission
+                alert('Please fill in all fields');
             }
-        }
-
-        function logout() {
-            localStorage.removeItem('username');
-            window.location.href = 'login.html'; // Redirect to the login page
         }
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
