--- a/login.html
+++ b/login.html
@@ -102,7 +102,7 @@
             </div>
             <div id="loginError" class="text-danger mt-3"></div>
         </form>
-        <p class="text-center text-dark mt-3">Don't have an account? <a href="register.html">Register</a></p>
+        <p class="text-center text-dark mt-3">Don't have an account? <a href="index.html">Register</a></p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
@@ -118,7 +118,7 @@
                 if (storedPassword === password) {
                     localStorage.setItem('username', username);
                     alert('You are successfully logged in');
-                    window.location.href = 'index.html'; // Redirect to dashboard
+                    window.location.href = 'dashboard.html'; // Redirect to dashboard
                 } else {
                     document.getElementById('loginError').innerText = 'Invalid username or password';
                 }
